<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/common_toolbar" />
        <include layout="@layout/line_h_color_e5" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:layout_below="@+id/toolbar_container"
        android:paddingLeft="@dimen/dimen_24_dip"
        android:focusable="false"
        android:paddingRight="@dimen/dimen_24_dip">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:hint="@string/receipt_address_user"
                    android:textColorHint="#999999"
                    android:textSize="@dimen/dimen_26_dip"
                    android:id="@+id/receipt_address_user"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:id="@+id/receipt_address_phone"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:hint="@string/receipt_address_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:text="@string/xing_number"
                        android:textColor="#999999"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/dimen_26_dip"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_90_dip" />
                    <EditText
                        android:id="@+id/receipt_phone_code"
                        android:textColorHint="#999999"
                        android:gravity="center_vertical"
                        android:textColor="#333333"
                        android:textSize="@dimen/dimen_26_dip"
                        android:hint="@string/receipt_phone_code"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingRight="@dimen/dimen_20_dip"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"/>
                    <Button
                        android:layout_marginLeft="@dimen/dimen_30_dip"
                        android:layout_marginStart="@dimen/dimen_30_dip"
                        android:background="@drawable/button_validcode_bg"
                        android:layout_width="0dip"
                        android:id="@+id/get_phone_code"
                        android:textColor="@color/color_ec9590"
                        android:text="@string/get_phone_code"
                        android:layout_height="@dimen/dimen_43_dip"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/bind_locate"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <LinearLayout
                    android:paddingLeft="@dimen/dimen_20_dip"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/province_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColorHint="#333333"
                        android:textColor="#333333"
                        android:hint="@string/bind_province"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/city_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#333333"
                        android:textColorHint="#333333"
                        android:hint="@string/bind_city"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/district_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#333333"
                        android:textColorHint="#333333"
                        android:hint="@string/bind_district"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:id="@+id/receipt_address_address"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:maxLines="1"
                    android:hint="@string/receipt_address_address"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#fb5151"
            android:text="@string/pay_immediately"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_32_dip"
            android:layout_height="@dimen/dimen_90_dip" />
    </RelativeLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:id="@+id/wheelView_container"
        android:visibility="gone">

        <include layout="@layout/line_h_color_e5" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80_dip"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="#0062f7"
                android:textSize="@dimen/dimen_30_dip"
                android:paddingLeft="@dimen/dimen_18_dip"
                android:paddingRight="@dimen/dimen_18_dip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/finish"
                android:text="@string/finish"
                android:gravity="center"
                android:textColor="#0062f7"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/dimen_30_dip"
                android:paddingLeft="@dimen/dimen_18_dip"
                android:paddingRight="@dimen/dimen_18_dip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <include layout="@layout/line_h_color_e5" />
        <com.xiaomabao.weidian.util.WheelView
            android:overScrollMode="never"
            android:id="@+id/wheelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>