<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/toolbar_container">
        <include layout="@layout/common_toolbar" />
        <include layout="@layout/line_h_color_e5" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:layout_below="@+id/toolbar_container"
        android:paddingLeft="@dimen/dimen_24_dip"
        android:focusable="false"
        android:paddingRight="@dimen/dimen_24_dip">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:hint="@string/bind_account_hint"
                    android:textColorHint="#999999"
                    android:textSize="@dimen/dimen_26_dip"
                    android:id="@+id/bind_account_hint"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/bind_locate"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <LinearLayout
                    android:paddingLeft="@dimen/dimen_20_dip"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/province_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColorHint="#333333"
                        android:textColor="#333333"
                        android:hint="@string/bind_province"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/city_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#333333"
                        android:textColorHint="#333333"
                        android:hint="@string/bind_city"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/district_text"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#333333"
                        android:textColorHint="#333333"
                        android:hint="@string/bind_district"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <TextView
                    android:id="@+id/bind_deposit_bank"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:hint="@string/bind_deposit_bank"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:id="@+id/bind_branch_text"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:hint="@string/bind_branch_bank"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:id="@+id/bind_card_no"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:hint="@string/bind_card_no"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_90_dip">
                <TextView
                    android:text="@string/xing_number"
                    android:textColor="#999999"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dimen_26_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_90_dip" />
                <EditText
                    android:id="@+id/bind_mobile_phone"
                    android:textColorHint="#999999"
                    android:gravity="center_vertical"
                    android:textColor="#333333"
                    android:textSize="@dimen/dimen_26_dip"
                    android:inputType="phone"
                    android:hint="@string/bind_mobile"
                    android:paddingRight="@dimen/dimen_20_dip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>
            <include layout="@layout/line_h_color_e5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/dimen_90_dip"
                android:paddingEnd="@dimen/dimen_90_dip">
                <Button
                    android:id="@+id/bind_card"
                    android:text="@string/bind_card"
                    android:textSize="@dimen/dimen_26_dip"
                    android:textColor="@color/color_white"
                    android:layout_marginTop="@dimen/dimen_50_dip"
                    android:layout_width="match_parent"
                    android:background="@drawable/common_radius_button"
                    android:layout_height="@dimen/dimen_60_dip" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:id="@+id/wheelView_container"
        android:visibility="gone">

        <include layout="@layout/line_h_color_e5" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80_dip"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="#0062f7"
                android:textSize="@dimen/dimen_30_dip"
                android:paddingLeft="@dimen/dimen_18_dip"
                android:paddingRight="@dimen/dimen_18_dip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/finish"
                android:text="@string/finish"
                android:gravity="center"
                android:textColor="#0062f7"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/dimen_30_dip"
                android:paddingLeft="@dimen/dimen_18_dip"
                android:paddingRight="@dimen/dimen_18_dip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <include layout="@layout/line_h_color_e5" />
        <com.xiaomabao.weidian.util.WheelView
            android:overScrollMode="never"
            android:id="@+id/wheelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>