<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/common_toolbar" />
    <include layout="@layout/line_h_color_e5" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/no_order_container"
            android:background="#f3f3f3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_200_dip"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zfcg"/>
            <TextView
                android:text="@string/pay_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="#666666"
                android:layout_marginTop="@dimen/dimen_40_dip"
                android:textSize="@dimen/dimen_24_dip"/>
            <LinearLayout
                android:layout_marginTop="@dimen/dimen_10_dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:text="@string/pay_code_hint"
                    android:maxLines="1"
                    android:textColor="#666666"
                    android:textSize="@dimen/dimen_24_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/code"
                    android:textSize="@dimen/dimen_24_dip"
                    android:textColor="#666666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/dimen_10_dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:text="@string/pay_code_hint2"
                    android:maxLines="1"
                    android:textColor="#666666"
                    android:textSize="@dimen/dimen_24_dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/finish"
                    android:textColor="#fb5250"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:text="@string/back_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <include
            android:id="@+id/anim_loading"
            layout="@layout/loading_anim" />
    </RelativeLayout>
</LinearLayout>